--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="zh-cn" ng-app="daisy">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>上好科技</title>
+    <link rel="shortcut icon" type="image/png" href="imgs/daisy.png"/>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="foundation-icons/foundation-icons.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
-    <div class="icon-bar four-up label success" role="navigation">
-      <a class="item" role="button" tabindex="0" aria-label="home">
+    <div class="icon-bar three-up label success" role="navigation">
+      <a class="item" role="button" tabindex="0" aria-label="home" href="#/home">
           <i class="fi-home"></i>
           <label>主页</label>
       </a>
-      <a class="item" role="button" tabindex="0" aria-label="tools">
+      <a class="item" role="button" tabindex="0" aria-label="tools" href="#/tools">
           <i class="fi-wrench"></i>
           <label>工具</label>
       </a>
-      <a class="item" role="button" tabindex="0" aria-label="about">
+      <a class="item" role="button" tabindex="0" aria-label="about" href="#/about">
           <i class="fi-info"></i>
           <label>关于</label>
       </a>
-      <a class="item" role="button" tabindex="0" aria-label="contact">
-          <i class="fi-mail"></i>
-          <label>联系</label>
-      </a>
     </div>
 
+    <div ng-view></div>
 
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation/foundation.equalizer.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/controller.js"></script>
   </body>
 </html>
