--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <div ng-view></div>
 
 
+    <footer class="text-center" style="color: #CCC;">
+        ©2014 上好科技 粤ICP备14075937号
+    </footer>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="bower_components/foundation/js/foundation/foundation.equalizer.js"></script>
